@@ -1,3 +1,7 @@
+- next version:
+  * WebPInewRGB/WebPInewYUVA accept being passed a NULL output buffer
+    and will perform auto-allocation.
+
 - 10/30/12: version 0.2.1
   * Various security related fixes
   * cwebp.exe: fix import errors on Windows XP
